# TsingYun_Tutorial_Vision-Aiming

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: simulator_protocol.md
run/: run.sh
simulator/: runner.py
simulator/Linux/AutoAim_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
simulator/MNIST/0/Materials/: 21.mat
simulator/MacOS.app/Contents/Frameworks/: UnityPlayer.dylib  libMonoPosixHelper.dylib  libmono-native.dylib  libmonobdwgc-2.0.dylib
simulator/MacOS.app/Contents/_CodeSignature/: CodeResources
simulator/Windows/AutoAim_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
simulator_client/: __init__.py  kalman_tracker_bindings.py  pipeline.py  protocol.py  target_selector.py
tasks/task1-aruco/: README.md  THEORY.md
tasks/task1-aruco/data/aruco/: README.txt
tasks/task1-aruco/src/: __init__.py  aruco_render.py  calibrate.py
tasks/task2-detector/: README.md  THEORY.md
tasks/task2-detector/src/: __init__.py  detector.py  model.py  train.py
tasks/task3-tracker/: CMakeLists.txt  README.md  THEORY.md
tasks/task3-tracker/include/: kalman_tracker.hpp
tasks/task3-tracker/src/: kalman_tracker.cpp  kalman_tracker_c_wrapper.cpp
tests/: conftest.py
tests/cpp/: task3_tracker_tests.cpp
tests/python/: test_runner_fallback.py  test_target_selector.py  test_task1_aruco.py  test_task2_detector.py  test_task2_mnist_model.py
tools/: check_no_notimplemented.py
(+7 files in other folders)
